--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-/tests export-ignore
+/tests          export-ignore
 /.gitattributes export-ignore
-/.gitignore export-ignore
+/.travis.yml    export-ignore
