--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
     - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
-    - if [[ $PHPUNIT_TEST ]]; then signify-nz/silverstripe-environmentindicator/bin/phpunit  signify-nz/silverstripe-environmentindicator/tests/EnvBarExtensionTest.php; fi
+    - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit  signify-nz/silverstripe-environmentindicator/tests/EnvBarExtensionTest.php; fi
     - if [[ $PHPUNIT_COVERAGE_TEST ]]; then phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml; fi
     - if [[ $PHPCS_TEST ]]; then vendor/bin/phpcs src/ tests/ *.php; fi
 
