--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,21 @@ env:
 matrix:
     include:
         - php: 5.6
-          env: DB=MYSQL RECIPE_VERSION=1.1.x-dev PHPUNIT_COVERAGE_TEST=1
+          env: DB=MYSQL RECIPE_VERSION=1.1.x-dev PHPUNIT_TEST=1
         - php: 7.0
-          env: DB=PGSQL RECIPE_VERSION=4.2.x-dev PHPUNIT_TEST=1
+          env: DB=MYSQL RECIPE_VERSION=4.2.x-dev PHPUNIT_TEST=1
         - php: 7.1
           env: DB=MYSQL RECIPE_VERSION=4.3.x-dev PHPUNIT_TEST=1
         - php: 7.2
-          env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
+          env: DB=MYSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
         - php: 7.3
           env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_TEST=1
+
+services:
+    - mysql
+
+before_install:
+    - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
 
 before_script:
     - phpenv rehash
