--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,27 @@ services:
 
 env:
     global:
+        - COMPOSER_ROOT_VERSION=4.3.x-dev
         - TRAVIS_NODE_VERSION="10"
 
 matrix:
     include:
-        - php: 5.6
-          env: DB=MYSQL RECIPE_VERSION=4.3.x-dev PHPUNIT_TEST=1
-        - php: 7.0
+        - php: 7.1
           env: DB=PGSQL RECIPE_VERSION=4.3.x-dev PHPUNIT_TEST=1
         - php: 7.1
           env: DB=MYSQL RECIPE_VERSION=4.3.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
+        - php: 7.1
+          env: DB=MYSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
         - php: 7.2
           env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
+        - php: 7.2
+          env: DB=MYSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
+        - php: 7.2
+          env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1
+        - php: 7.3
+          env: DB=PGSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1
+        - php: 7.3
+          env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
         - php: 7.3
           env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_COVERAGE_TEST=1
 
@@ -30,11 +39,11 @@ before_script:
 
     - composer validate
     - composer require --no-update silverstripe/recipe-cms:"$RECIPE_VERSION"
-    - if [[ $DB == PGSQL ]]; then composer require --no-update silverstripe/postgresql:2.1.x-dev; fi
+    - if [[ $DB == PGSQL ]]; then composer require silverstripe/postgresql:^2 --no-update; fi
     - composer install --prefer-source --no-interaction --no-progress --no-suggest --optimize-autoloader --verbose --profile
 
 script:
-    - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit tests/EnvBarExtensionTest.php; fi
+    - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit tests/; fi
     - if [[ $PHPUNIT_COVERAGE_TEST ]]; then phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml; fi
     - if [[ $PHPCS_TEST ]]; then vendor/bin/phpcs src/ tests/ *.php; fi
 
