--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,19 @@ services:
 env:
     global:
         - COMPOSER_ROOT_VERSION=4.3.x-dev
-        - TRAVIS_NODE_VERSION="10"
 
 matrix:
     include:
         - php: 7.1
-          env: DB=PGSQL RECIPE_VERSION=4.3.x-dev PHPUNIT_TEST=1
-        - php: 7.1
           env: DB=MYSQL RECIPE_VERSION=4.3.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
-        - php: 7.1
-          env: DB=MYSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
-        - php: 7.2
-          env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
         - php: 7.2
           env: DB=MYSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
-        - php: 7.2
-          env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1
         - php: 7.3
-          env: DB=PGSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1
+          env: DB=PGSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
         - php: 7.3
           env: DB=MYSQL RECIPE_VERSION=4.5.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
         - php: 7.3
-          env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_COVERAGE_TEST=1
+          env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_TEST=1 PHPUNIT_COVERAGE_TEST=1 PHPCS_TEST=1
 
 before_install:
     - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
