fix: Change EnvBarDisplay default value to 1

--- a/tests/EnvBarExtensionTest.yml
+++ b/tests/EnvBarExtensionTest.yml
@@ -3,6 +3,7 @@ SilverStripe\SiteConfig\SiteConfig:
     Title: Test site
     CanViewType: Anyone
     CanEditType: LoggedInUsers
+    EnvBarDisplay: 1
 
 SilverStripe\Security\Group:
   admins:
