--- a/tests/EnvBarExtensionTest.yml
+++ b/tests/EnvBarExtensionTest.yml
@@ -3,7 +3,7 @@ SilverStripe\SiteConfig\SiteConfig:
     Title: Test site
     CanViewType: Anyone
     CanEditType: LoggedInUsers
-    EnvBarDisplay: 1
+    EnvBarDisplay: true
 
 SilverStripe\Security\Group:
   admins:
