--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "issues": "https://github.com/signify-nz/silverstripe-environmentindicator/issues"
     },
     "require": {
-        "silverstripe/cms": "^4.0",
-        "silverstripe/framework": "^4.0",
-        "silverstripe/vendor-plugin": "^1.0",
-        "silverstripe/versioned": "^1.0"
+        "silverstripe/cms": "^4.0 || ^5.0",
+        "silverstripe/framework": "^4.0 || ^5.0",
+        "silverstripe/vendor-plugin": "^1.0 || ^2.0",
+        "silverstripe/versioned": "^1.0 || ^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
