--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "issues": "https://github.com/signify-nz/silverstripe-environmentindicator/issues"
     },
     "require": {
+        "php": ">=7.4",
         "silverstripe/cms": "^4.0 || ^5.0",
         "silverstripe/framework": "^4.0 || ^5.0",
         "silverstripe/vendor-plugin": "^1.0 || ^2.0",
