--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "silverstripe/versioned": "^1.0 || ^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "extra": {
@@ -49,7 +49,11 @@
         }
     },
     "config": {
-        "process-timeout": 600
+        "process-timeout": 600,
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true
+        }
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
